--- a/src/components/ChatInterface.css
+++ b/src/components/ChatInterface.css
@@ -88,6 +88,10 @@
   cursor: pointer;
 }
 
+.send-button:hover {
+  background-color: hsl(var(--primary) / 0.9);
+}
+
 .send-button:disabled {
   opacity: 0.6;
 }
